--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -34,17 +34,17 @@
 
 // Palette.
 	$palette: (
-		bg:					#ffffff,
-		bg-accent:			#333333,
-		bg-alt:				#f6f6f6,
-		fg:					#585858,
+		bg:					#000000,
+		bg-accent:			#000000,
+		bg-alt:				#161616,
+		fg:					#ffffff,
 		fg-accent:			#ffffff,
 		border:				#c9c9c9,
 		border-bg:			rgba(144,144,144,0.075),
-		accent1:			#f2849e,
-		accent2:			#7ecaf6,
-		accent3:			#7bd0c1,
-		accent4:			#c75b9b,
-		accent5:			#ae85ca,
-		accent6:			#8499e7,
+		accent1:			#BE0575,
+		accent2:			#F62336,
+		accent3:			#FF6611,
+		accent4:			#FFEC4A,
+		accent5:			#203FB6,
+		accent6:			#008AFB,
 	);
