--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -9,7 +9,8 @@
 	form {
 		margin: 0 0 _size(element-margin) 0;
 		overflow-x: hidden;
-
+		overflow-y: hidden;
+		
 		> :last-child {
 			margin-bottom: 0;
 		}
